--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-ejs-layouts": "^2.4.0",
     "phantom": "^6.0.0",
     "phantomjs": "^2.1.7"
   },
